// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popconfirm Popconfirm baseVue demo works fine 1`] = `
<div
  class="t-space t-space-horizontal"
  style="gap: 80px;"
>
  <div
    class="t-space-item"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        删除订单
      </span>
    </button>
  </div>
  <div
    class="t-space-item"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        提交审核
      </span>
    </button>
  </div>
</div>
`;

exports[`Popconfirm Popconfirm buttonVue demo works fine 1`] = `
<div
  class="t-space t-space-horizontal"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-space t-space-horizontal"
      style="gap: 16px;"
    >
      <div
        class="t-space-item"
      >
        <button
          class="t-button t-size-m t-button--variant-outline t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            按钮样式（属性-字符串）
          </span>
        </button>
      </div>
      <div
        class="t-space-item"
      >
        <button
          class="t-button t-size-m t-button--variant-outline t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            按钮样式（属性-对象）
          </span>
        </button>
      </div>
      <div
        class="t-space-item"
      >
        <span>
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            <span
              class="t-button__text"
            >
              按钮样式（插槽）
            </span>
          </button>
            
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popconfirm Popconfirm describeVue demo works fine 1`] = `
<div
  class="t-space t-space-horizontal"
  style="gap: 80px;"
>
  <div
    class="t-space-item"
  >
    <span>
       
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        type="button"
      >
        <span
          class="t-button__text"
        >
          自定义浮层内容
        </span>
      </button>
    </span>
  </div>
  <div
    class="t-space-item"
  >
    <span>
       
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-warning"
        type="button"
      >
        <span
          class="t-button__text"
        >
          自定义浮层内容
        </span>
      </button>
    </span>
  </div>
</div>
`;

exports[`Popconfirm Popconfirm iconVue demo works fine 1`] = `
<div
  class="t-space t-space-horizontal"
  style="gap: 60px;"
>
  <div
    class="t-space-item"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        默认
      </span>
    </button>
  </div>
  <div
    class="t-space-item"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        警告
      </span>
    </button>
  </div>
  <div
    class="t-space-item"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        危险
      </span>
    </button>
  </div>
  <div
    class="t-space-item"
  >
    <span>
       
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          自定义图标（插槽）
        </span>
      </button>
    </span>
  </div>
  <div
    class="t-space-item"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        自定义图标（属性）
      </span>
    </button>
  </div>
</div>
`;

exports[`Popconfirm Popconfirm inheritVue demo works fine 1`] = `
<div
  class="t-space t-space-horizontal"
  style="gap: 80px;"
>
  <div
    class="t-space-item"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        浮层出现在下方
      </span>
    </button>
  </div>
  <div
    class="t-space-item"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        浮层出现在右侧
      </span>
    </button>
  </div>
</div>
`;
